tests/macro-tests/cases/widget_new/missing_field_multi.stderr
error[E0061]: this method takes 2 arguments but 1 argument was supplied
  --> cases/widget_new/missing_field_multi.rs:13:9
   |
 9 |       let _ = Wgt! {
   |  _____________-
...  |
13 | |         background_gradient = { axis: 0.deg() };
   | |         ^^^^^^^^^^^^^^^^^^^
14 | |     };
   | |_____- argument #2 is missing
   |
note: method defined here
  --> $WORKSPACE/crates/zng-wgt-fill/src/lib.rs
   |
   | / #[property(FILL, default(0.deg(), {
   | |     let c = colors::BLACK.transparent();
   | |     stops![c, c]
   | | }))]
   | |____^
   = note: this error originates in the attribute macro `property` (in Nightly builds, run with -Z macro-backtrace for more info)
help: provide the argument
  --> $WORKSPACE/crates/zng-wgt/src/wgt.rs
   |
   - #[widget($crate::Wgt)]
   + (axis, /* stops */)
   |
